--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <header>
         <h1>The Leaky Cauldron</h1>
     </header>
-
+    <main>
+        <h2>This is a Heading</h2>
+        <h3>This is a subheading</h3>
+        <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
+    </main>
     <script src="js/main.js"></script>
 </body>
 </html>
