add paragraph examples to main section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <h2>This is a Heading</h2>
         <h3>This is a subheading</h3>
         <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
+
+        <p class="serif">Baskerville<br/>
+            Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal. Holly, Snape centaur portkey ghost Hermione spell bezoar Scabbers. Peruvian-Night-Powder.
+        </p>
+        <p class="sans">Gill Sans Light<br/>
+            Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal. Holly, Snape centaur portkey ghost Hermione spell bezoar Scabbers. Peruvian-Night-Powder.
+        </p>
+
     </main>
     <script src="js/main.js"></script>
 </body>
