insert text links into paragraph content

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
 
         <p class="serif">Baskerville<br/>
-            Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal. Holly, Snape centaur portkey ghost Hermione spell bezoar Scabbers. Peruvian-Night-Powder.
+            Alohamora wand elf parchment, <a href="#">Wingardium Leviosa hippogriff</a>, house <a href="#">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell bezoar Scabbers. Peruvian-Night-Powder.
         </p>
         <p class="sans">Gill Sans Light<br/>
-            Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal. Holly, Snape centaur portkey ghost Hermione spell bezoar Scabbers. Peruvian-Night-Powder.
+            Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#">bezoar Scabbers</a>. Peruvian-Night-Powder.
         </p>
 
     </main>
