add buttons to main content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <p class="sans">Gill Sans Light<br/>
             Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
         </p>
-
+        <div id="buttons">
+            <a href="#" class="normal">button</a>
+            <a href="#" class="hover">hover</a>
+        </div>
     </main>
     <script src="js/main.js"></script>
 </body>
