add site adjectives to main content

--- a/index.html
+++ b/index.html
@@ -23,9 +23,18 @@
         <p class="sans">Gill Sans Light<br/>
             Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
         </p>
+
         <div id="buttons">
             <a href="#" class="normal">button</a>
             <a href="#" class="hover">hover</a>
+        </div>
+
+        <div id="adjectives">
+            <h4>Illustrated</h4>
+            <h4>Mysterious</h4>
+            <h4>Interactive</h4>
+            <h4>Magical</h4>
+            <h4>Nostalgic</h4>
         </div>
     </main>
     <script src="js/main.js"></script>
