add sidebar with sample images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             <h4>Nostalgic</h4>
         </div>
     </main>
+
+    <aside class="sidebar">
+        <div id="sampleimg">
+            <img src="img/streetsign.jpg" alt="Restaurant Street Sign"/>
+            <img src="img/diners.jpg" alt="Diners at Leaky Cauldron"/>
+            <img src="img/diagonalley.jpg" alt="Diagon Alley"/>
+        </div>
+    </aside>
+    
     <script src="js/main.js"></script>
 </body>
 </html>
