add color hex codes to sidebar

--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
             <img src="img/diners.jpg" alt="Diners at Leaky Cauldron"/>
             <img src="img/diagonalley.jpg" alt="Diagon Alley"/>
         </div>
+        <div class="colors">
+            <p id="colorblock1">#39322a</p>
+            <p id="colorblock2">#4d3d2e</p>
+            <p id="colorblock3">#71271c</p>
+            <p id="colorblock4">#e8b54c</p>
+            <p id="colorblock5">#534e2f</p>
+        </div>
     </aside>
-    
+
     <script src="js/main.js"></script>
 </body>
 </html>
