change image extensions to PNG format

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <aside class="sidebar">
         <div id="sampleimg">
-            <img src="img/streetsign.jpg" alt="Restaurant Street Sign"/>
-            <img src="img/diners.jpg" alt="Diners at Leaky Cauldron"/>
-            <img src="img/diagonalley.jpg" alt="Diagon Alley"/>
+            <img src="img/streetsign.png" alt="Restaurant Street Sign"/>
+            <img src="img/diners.png" alt="Diners at Leaky Cauldron"/>
+            <img src="img/diagonalley.png" alt="Diagon Alley"/>
         </div>
         <div class="colors">
             <p id="colorblock1">#39322a</p>
