add logo to header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img src="img/newlogo.png" alt="The Leaky Cauldron"/>
         <h1>The Leaky Cauldron</h1>
     </header>
     <main>
