apply Google fonts to paragraphs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Libre+Baskerville" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,10 +19,10 @@
         <h3>This is a subheading</h3>
         <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
 
-        <p class="serif">Baskerville<br/>
+        <p class="serif">Libre Baskerville<br/>
             Alohamora wand elf parchment, <a href="#" class="textlinks">Wingardium Leviosa hippogriff</a>, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell bezoar Scabbers. Peruvian-Night-Powder.
         </p>
-        <p class="sans">Gill Sans Light<br/>
+        <p class="sans">Lato<br/>
             Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
         </p>
 
