set mobile-first positioning of sample images

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </main>
 
     <aside class="sidebar">
-        <div id="sampleimg">
-            <img src="img/streetsign.png" alt="Restaurant Street Sign"/>
-            <img src="img/diners.png" alt="Diners at Leaky Cauldron"/>
-            <img src="img/diagonalley.png" alt="Diagon Alley"/>
+        <div class="sampleimg">
+            <img src="img/streetsign.png" alt="Restaurant Street Sign" id="sign"/>
+            <img src="img/diners.png" alt="Diners at Leaky Cauldron" id="diners"/>
+            <img src="img/diagonalley.png" alt="Diagon Alley" id="diagon"/>
         </div>
         <div class="colors">
             <p id="colorblock1">#39322a</p>
