replace logo with Illustrator version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="img/newlogo.png" alt="The Leaky Cauldron"/>
+        <img src="img/cauldron_broom.png" alt="The Leaky Cauldron"/>
         <h1>The Leaky Cauldron</h1>
     </header>
     <main>
