change header background into banner image

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <header>
-        <img src="img/cauldron_broom.png" alt="The Leaky Cauldron"/>
+        <img src="img/cauldron_broom_large.png" alt="The Leaky Cauldron" id="logo"/>
         <h1>The Leaky Cauldron</h1>
+        <img src="img/banner.png" alt="Illustration of the Leaky Cauldron" id="banner"/>
     </header>
     <main>
         <h2>This is a Heading</h2>
