give the site a container to prevent oversizing

--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Libre+Baskerville" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="sitecontainer">
         <img src="img/cauldron_broom_large.png" alt="The Leaky Cauldron" id="logo"/>
         <h1>The Leaky Cauldron</h1>
         <img src="img/banner.png" alt="Illustration of the Leaky Cauldron" id="banner"/>
     </header>
-    <main>
+
+    <main class="sitecontainer">
         <h2>This is a Heading</h2>
         <h3>This is a subheading</h3>
         <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
         <p class="sans">Lato<br/>
             Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
         </p>
-
         <div id="buttons">
             <a href="#" class="normal">button</a>
             <a href="#" class="hover">hover</a>
         </div>
-
         <div id="adjectives">
             <h4>Illustrated</h4>
             <h4>Mysterious</h4>
@@ -37,7 +36,7 @@
         </div>
     </main>
 
-    <aside class="sidebar">
+    <aside class="sidebar sitecontainer">
         <div class="sampleimg">
             <img src="img/streetsign.png" alt="Restaurant Street Sign" id="sign"/>
             <img src="img/diners.png" alt="Diners at Leaky Cauldron" id="diners"/>
