make buttons full-width on mobile screens

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     </header>
 
     <main class="sitecontainer">
-        <h2>This is a Heading</h2>
-        <h3>This is a subheading</h3>
-        <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
-        <p class="sans">Lato<br/>
-            Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
-        </p>
+        <div id="copy">
+            <h2>This is a Heading</h2>
+            <h3>This is a subheading</h3>
+            <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
+            <p class="sans">Lato<br/>
+                Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
+            </p>
+        </div>
         <div id="buttons">
             <a href="#" class="normal">button</a>
             <a href="#" class="hover">hover</a>
