--- a/index.html
+++ b/index.html
@@ -16,42 +16,44 @@
         <img src="img/banner.png" alt="Illustration of the Leaky Cauldron" id="banner"/>
     </header>
 
-    <main class="sitecontainer">
-        <div id="copy">
-            <h2>This is a Heading</h2>
-            <h3>This is a subheading</h3>
-            <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
-            <p class="sans">Lato<br/>
-                Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
-            </p>
-        </div>
-        <div id="buttons">
-            <a href="#" class="normal">button</a>
-            <a href="#" class="hover">hover</a>
-        </div>
-        <div id="adjectives">
-            <h4>Illustrated</h4>
-            <h4>Mysterious</h4>
-            <h4>Interactive</h4>
-            <h4>Magical</h4>
-            <h4>Nostalgic</h4>
-        </div>
-    </main>
+    <div class="sitecontainer">
+        <main class="sitecontainer">
+            <div id="copy">
+                <h2>This is a Heading</h2>
+                <h3>This is a subheading</h3>
+                <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
+                <p class="sans">Lato<br/>
+                    Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
+                </p>
+            </div>
+            <div id="buttons">
+                <a href="#" class="normal">button</a>
+                <a href="#" class="hover">hover</a>
+            </div>
+            <div id="adjectives">
+                <h4>Illustrated</h4>
+                <h4>Mysterious</h4>
+                <h4>Interactive</h4>
+                <h4>Magical</h4>
+                <h4>Nostalgic</h4>
+            </div>
+        </main>
 
-    <aside class="sidebar sitecontainer">
-        <div class="sampleimg">
-            <img src="img/streetsign.png" alt="Restaurant Street Sign" id="sign"/>
-            <img src="img/diners.png" alt="Diners at Leaky Cauldron" id="diners"/>
-            <img src="img/diagonalley.png" alt="Diagon Alley" id="diagon"/>
-        </div>
-        <div class="colors">
-            <p id="colorblock1">#39322a</p>
-            <p id="colorblock2">#4d3d2e</p>
-            <p id="colorblock3">#71271c</p>
-            <p id="colorblock4">#e8b54c</p>
-            <p id="colorblock5">#534e2f</p>
-        </div>
-    </aside>
+        <aside class="sidebar sitecontainer">
+            <div class="sampleimg">
+                <img src="img/streetsign.png" alt="Restaurant Street Sign" id="sign"/>
+                <img src="img/diners.png" alt="Diners at Leaky Cauldron" id="diners"/>
+                <img src="img/diagonalley.png" alt="Diagon Alley" id="diagon"/>
+            </div>
+            <div class="colors">
+                <p id="colorblock1">#39322a</p>
+                <p id="colorblock2">#4d3d2e</p>
+                <p id="colorblock3">#71271c</p>
+                <p id="colorblock4">#e8b54c</p>
+                <p id="colorblock5">#534e2f</p>
+            </div>
+        </aside>
+    </div>
 
     <script src="js/main.js"></script>
 </body>
