move colors to footer so images can be larger

--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
                 <img src="img/diners.png" alt="Diners at Leaky Cauldron" id="diners"/>
                 <img src="img/diagonalley.png" alt="Diagon Alley" id="diagon"/>
             </div>
-            <div class="colors">
-                <p id="colorblock1">#39322a</p>
-                <p id="colorblock2">#4d3d2e</p>
-                <p id="colorblock3">#71271c</p>
-                <p id="colorblock4">#e8b54c</p>
-                <p id="colorblock5">#534e2f</p>
-            </div>
         </aside>
     </div>
+
+    <footer>
+        <div class="colors">
+            <p id="colorblock1">#39322a</p>
+            <p id="colorblock2">#4d3d2e</p>
+            <p id="colorblock3">#71271c</p>
+            <p id="colorblock4">#e8b54c</p>
+            <p id="colorblock5">#534e2f</p>
+        </div>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
