adjust color block sizes on larger screens

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </aside>
     </div>
 
-    <footer>
+    <footer class="sitecontainer">
         <div class="colors">
             <p id="colorblock1">#39322a</p>
             <p id="colorblock2">#4d3d2e</p>
