clean up CSS to make it drier & more organized

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </p>
             </div>
             <div id="buttons">
-                <a href="#" class="normal">button</a>
-                <a href="#" class="hover">hover</a>
+                <a href="#" class="button-one">button</a>
+                <a href="#" class="button-two">hover</a>
             </div>
             <div id="adjectives">
                 <h4>Illustrated</h4>
@@ -48,8 +48,8 @@
         </aside>
     </div>
 
-    <footer class="sitecontainer">
-        <div class="colors">
+    <footer>
+        <div class="colors sitecontainer">
             <p id="colorblock1">#39322a</p>
             <p id="colorblock2">#4d3d2e</p>
             <p id="colorblock3">#71271c</p>
