--- a/index.html
+++ b/index.html
@@ -18,44 +18,47 @@
 
     <div class="sitecontainer">
         <main class="sitecontainer">
-            <div id="copy">
-                <h2>This is a Heading</h2>
-                <h3>This is a subheading</h3>
+            <section id="copy">
+                <h2 class="visuallyhidden">Copy Examples</h2>
+                <h3>This is a Heading</h3>
+                <h4>This is a subheading</h4>
                 <p class="description">Font: Romance Fatal Serif Std #39322a / #71271c</p>
                 <p class="sans">Lato<br/>
                     Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house <a href="#" class="textlinks">dementors betrayal</a>. Holly, Snape centaur portkey ghost Hermione spell <a href="#" class="textlinks">bezoar Scabbers</a>. Peruvian-Night-Powder.
                 </p>
-            </div>
-            <div id="buttons">
+            </section>
+            <section id="buttons">
+                <h2 class="visuallyhidden">Buttons</h2>
                 <a href="#" class="button-one">button</a>
                 <a href="#" class="button-two">hover</a>
-            </div>
-            <div id="adjectives">
-                <h4>Illustrated</h4>
-                <h4>Mysterious</h4>
-                <h4>Interactive</h4>
-                <h4>Magical</h4>
-                <h4>Nostalgic</h4>
-            </div>
+            </section>
+            <section id="adjectives">
+                <h2 class="visuallyhidden">Adjectives</h2>
+                <h5>Illustrated</h5>
+                <h5>Mysterious</h5>
+                <h5>Interactive</h5>
+                <h5>Magical</h5>
+                <h5>Nostalgic</h5>
+            </section>
         </main>
 
-        <aside class="sidebar sitecontainer">
-            <div class="sampleimg">
-                <img src="img/streetsign.png" alt="Restaurant Street Sign" id="sign"/>
-                <img src="img/diners.png" alt="Diners at Leaky Cauldron" id="diners"/>
-                <img src="img/diagonalley.png" alt="Diagon Alley" id="diagon"/>
-            </div>
+        <aside class="sidebar sampleimg sitecontainer">
+            <h2 class="visuallyhidden">Sample images</h2>
+            <img src="img/streetsign.png" alt="Restaurant Street Sign" id="sign"/>
+            <img src="img/diners.png" alt="Diners at Leaky Cauldron" id="diners"/>
+            <img src="img/diagonalley.png" alt="Diagon Alley" id="diagon"/>
         </aside>
     </div>
 
     <footer>
-        <div class="colors sitecontainer">
+        <section class="colors sitecontainer">
+            <h2 class="visuallyhidden">Site colors</h2>
             <p id="colorblock1">#39322a</p>
             <p id="colorblock2">#4d3d2e</p>
             <p id="colorblock3">#71271c</p>
             <p id="colorblock4">#e8b54c</p>
             <p id="colorblock5">#534e2f</p>
-        </div>
+        </section>
     </footer>
 
     <script src="js/main.js"></script>
